# super_como

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh
CAD/: README.md
CAD/decks/: deck1.SLDPRT  deck3.SLDPRT
CAD/elp_pole_mount/: elp_pole_mount_base.stl  elp_pole_mount_holder.stl
CAD/elp_seat_mount/: elp_seat_mount.stl
CAD/encoder_disk/: encoder_disk.SLDPRT  encoder_disk.STL
CAD/encoder_mount/: encoder_mount.SLDPRT  encoder_mount.STL
CAD/hammerhead_decks/: deck2.SLDPRT
CAD/teensy_ckt/: super_como_r1.brd  super_como_r1.pro  super_como_r1.sch
CAD/ultrasonic_mount/: LICENSE.txt  README.txt  attribution_card.html
bill_of_materials/: super_como_parts_list.xlsx
scripts/: software_installer.sh
setup/: git_config_setup.sh  install_programs.sh  install_ros.sh  install_zed_sdk.sh  rules_setup.sh  software_installer.sh
setup/downloads/: downloaded_files
setup/helper_scripts/: install_ros_kinetic.sh  (+1 more)
teensy_code/: README.md  Ultrasonic_only_Code.ino
workspace/devel/: .catkin  (+2 more)
workspace/src/hardware_interface/: CMakeLists.txt  README.md  package.xml
workspace/src/hardware_interface/launch/: elp_cams.launch  elp_cams2.launch  scomo.launch  super_como.launch
workspace/src/hardware_interface/launch/elp_cams/: elp_back.launch  elp_cams_all.launch  elp_front.launch  elp_left.launch  elp_right.launch
workspace/src/hardware_interface/launch/elp_testing/: elp_cam3.launch  elp_cam_launch_one.launch  elp_cams.launch
workspace/src/hardware_interface/launch/teensy/: teensy.launch
workspace/src/hardware_interface/msg/: encoders.msg  ultrasonics.msg
(+67 files in other folders)
